added the edge cases upto 1.2 to 1.8 and modified the jsp.

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,3 +1,4 @@
+
 /* ================= GLOBAL RESET ================= */
 * {
     margin: 0;
@@ -228,3 +229,10 @@ tr:hover {
     content: "* ";
     font-weight: bold;
 }
+
+label.required::after {
+    content: " *";
+    color: red;
+    font-weight: bold;
+}
+
